fix: reject theme names with spaces and keep iteration snapshot based
Space splitting made other operations inconsistent instead, most
visibly bind("primary small", signal), so a theme name containing
spaces is rejected again like ClassList rejects class names with
spaces.

The iterator goes back to walking the theme names present when it was
created, which is now documented, while keeping the binding check, the
state guard and the write-through removal.

removeAll no longer casts values that are not strings, so a collection
holding other types is tolerated the way remove(Object) tolerates it.

Part of #25575